[package]
name = "gpt3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
confy = "0.5.1"
serde = {version = "1.0.148", features = ["derive"]}
serde_json = "1.0.40"
reqwest = "0.11.13"
gpt3_rs = "0.3.4"
tokio = { version = "1.22.0", features = ["full"] }
